# loco-openapi-Initializer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  example.yaml
config/: development.yaml  test.yaml
example/: .gitignore  Cargo.toml
example/config/: development.yaml  test.yaml
example/examples/: playground.rs
example/src/: app.rs
example/src/controllers/: album.rs  mod.rs
example/src/models/: users.rs
example/tests/models/: users.rs
example/tests/models/snapshots/: can_validate_model@users.snap
example/tests/requests/: album.rs  auth.rs  mod.rs  prepare_data.rs
src/: app.rs  auth.rs  config.rs  lib.rs  openapi.rs  prelude.rs  utils.rs
src/controllers/: album.rs
tests/: mod.rs
tests/models/: users.rs
tests/requests/: album.rs  auth.rs  prepare_data.rs
tests/ui/: mod.rs  reqeust.rs
tests/ui/snapshots/: r#mod__ui__reqeust__[__redoc].snap  r#mod__ui__reqeust__[__redoc__openapi.json].snap  r#mod__ui__reqeust__[__scalar].snap  r#mod__ui__reqeust__[__swagger__].snap  r#mod__ui__reqeust__[__swagger__openapi.yaml].snap  r#mod__ui__reqeust__redoc.snap  r#mod__ui__reqeust__scalar.snap  r#mod__ui__reqeust__swagger.snap
