[package]
name = "loco-openapi"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
full = ["swagger", "redoc", "scalar"]
swagger = ["dep:utoipa-swagger-ui"]
redoc = ["dep:utoipa-redoc"]
scalar = ["dep:utoipa-scalar"]


[dependencies]
loco-rs = { version = "*", features = [
    "all_openapi",
], path = "/Users/elijahmcmorris/Desktop/Stuff/Programing/loco" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
async-trait = { version = "0.1" }
axum = { version = "0.8.1" }

# OpenAPI
utoipa = { version = "5.0.0", features = ["yaml"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.0", features = [
    "axum",
    "vendored",
], optional = true }
utoipa-redoc = { version = "6.0.0", features = ["axum"], optional = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"], optional = true }

[dev-dependencies]
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
