[package]
name = "by-loco-openapi"
version = "0.1.0"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/niceskylei/loco-openapi-Initializer"
description = "A Loco OpenAPI Initializer"

[lib]
path = "src/lib.rs"

[features]
default = ["full"]
full = ["swagger", "redoc", "scalar"]
swagger = ["dep:utoipa-swagger-ui"]
redoc = ["dep:utoipa-redoc"]
scalar = ["dep:utoipa-scalar"]


[workspace.dependencies]
loco-rs = {version = "0.15.0", package = "by-loco"}

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
async-trait = { version = "0.1" }
axum = { version = "0.8.1" }

# OpenAPI
utoipa = { version = "5.0.0", features = ["yaml"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.0", features = [
    "axum",
    "vendored",
], optional = true }
utoipa-redoc = { version = "6.0.0", features = ["axum"], optional = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"], optional = true }

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
insta = { version = "1.34.0", features = [
    "redactions",
    "yaml",
    "json",
    "filters",
] }
rstest = { version = "0.21.0" }
serde_yaml = { version = "0.9" }
serial_test = "3.2.0"
